samples/_failures_safe/1761363719_83ce71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da21c45f.c: In function ‘main’:
./samples/SAFE/__tmp_da21c45f.c:152:33: error: expected ‘)’ at end of input
  152 |     if (analyzer.word_count == 0
      |        ~                        ^
      |                                 )
./samples/SAFE/__tmp_da21c45f.c:152:5: error: expected declaration or statement at end of input
  152 |     if (analyzer.word_count == 0
      |     ^~
